style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");

* {
    cursor: url('assets/logos/cursor-black (Custom).png') 8 8, auto;
    scroll-behavior: smooth;
}

#home, #school {
    background: rgb(23,23,82);
    background: linear-gradient(225deg, rgba(23,23,82,1) 0%, rgba(36,36,130,1) 50%, rgba(55,55,199,1) 100%);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas: "header"
                         "main";
}

#header {
    margin: 2% 20% 5% 20%;
    display: grid;
    grid-template-columns: 1fr 7fr 1fr 1fr;
    grid-template-areas: "homebtn help schoolbtn otherbtn";
}

.homebtn {

}

.schoolbtn {

}

.otherbtn {
    margin-left: 25px;
}

.otherbtn {
    text-align: center;
}

.btn {
    color: #242482;
    min-width: 165px;
    max-width: 250px;
    width: initial;
    font-size: 20px;
    border: none;
    cursor: none;
    padding: 20px;
    text-decoration: none;
    user-select: none;
    border-radius: 35px;
    display: inline-block;
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    outline: none;


    background: rgb(251,99,81);
    background: linear-gradient(to right, rgba(255,151,139,1) 0%, rgba(249,124,128,1) 50%, rgba(242,115,142,1) 50%, rgba(251,99,81,1) 0%, rgba(246,89,95,1) 50%, rgba(242,78,112,1) 100%);
    background-size: 200% 100%;
    background-position: right bottom;
    transition: all .5s ease-out;
}

.btn:hover {
    color: white;
    background-position: left bottom;
}

.main {
    margin: 0 20% 0 20%;
    text-align: center;
    color: white;
    font-family: 'Roboto Condensed', sans-serif;
}

#welcome {
    text-align: center;
    margin-top: 20%;
}

#name {
    font-size: 50px;
}

#info {
    font-size: 25px;
    margin: 700px 0 350px 0;
}

.mainbtn {
    margin: 0 20px;
}

#backtotop {
    position: fixed;
    bottom: 0;
    right: 0;
    margin: 15px;
    z-index: 100;
    opacity: 0;
    transition: ease 250ms;
}

.logo {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 100;
    margin: 5px;
    background-color: transparent;
}

.splashscreen {
    background: rgb(23,23,82);
    background: linear-gradient(225deg, rgba(23,23,82,1) 0%, rgba(36,36,130,1) 50%, rgba(55,55,199,1) 100%);
}

.loading {
    width: 5%;
    top: 50%;
    left: 50%;
    transform:translate(-50%,-50%);
    position: absolute;
}

#home::-webkit-scrollbar {
    display: none;
}

::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #242482;
    color: #242482;
    display: none;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgba(242,78,112,1);
    border-radius: 30px;
}

::-webkit-scrollbar-track-piece {

}

.rotate {
    transition: transform ease-in-out 0.2s;
}

.rotate:hover {
    transition: 0.70s;
    -webkit-transition: 0.70s;
    -moz-transition: 0.70s;
    -ms-transition: 0.70s;
    -o-transition: 0.70s;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: scale(1.1) rotate(360deg);
}

.main { grid-area: main; }
.header { grid-area: header; }
.help { grid-area: help; }
#homebtn { grid-area: homebtn; }
#schoolbtn { grid-area: schoolbtn; }
#otherbtn { grid-area: otherbtn; }

